syntax = "proto3";

package calculator;

option go_package = "/proto/gen;mainapipb";


message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}