syntax = "proto3";

import "greeter.proto";

package calculator;

option go_package = "/proto/gen;mainapipb";

service Calculate {
    rpc Add (AddRequest) returns (AddResponse);
}

service Greeter {
    rpc Greet (HelloRequest) returns (HelloResponse);
}

message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddResponse {
    int32 sum = 1;
}